modif modale auth

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,9 +6,9 @@
 
     <ul class="menu bouton_align">
         <li><button (click)="toggleTheme()">{{theme}}</button></li>
-        <li><a href="#modal-one" class="btn openbtn">Déclarer un problème</a></li>
+        <li><a href="#declaration" class="btn openbtn">Déclarer un problème</a></li>
         <li><a class="simple_button" routerLink="/mention-legal">Mentions Légales</a></li>
-        <li><a class="green_button" routerLink="/connexion">Connexion</a></li>    
+        <li><a href="#connexion" class="btn openbtn green_button">Connexion</a></li>    
         
     </ul>
 
