--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
 <app-map [filterParam]="currentFilter"></app-map>
 <app-filters-bennes (getFilterBenne)="getFilter($event)"></app-filters-bennes>
 <app-declaration></app-declaration>
+<app-auth></app-auth>
