--- a/src/app/components/mentionsLegales/mentions.component.html
+++ b/src/app/components/mentionsLegales/mentions.component.html
@@ -1,77 +1,134 @@
-
-    <h2>Informations légales</h2>
-    
-    <p style="text-align:center">MENTIONS LEGALES :</p>
-    
-    <p style="text-align:justify">Correspondant aux directives  de l'article 6-III et 19 de la Loi numero 2004-575 du 21 juin 2004 relative à la Confiance en l'économie numérique, dite L.C.E.N., nous informons les visiteurs du site internet : <a href="https://PROJET SCOLAIRE" target="_blank">PROJET SCOLAIRE</a> Ces informations qui suivent :</p>
+<div style="width: 70%; margin-left: auto; margin-right: auto; padding-top: 8%;">
+    <h2 style="text-align:center">Mentions Legales</h2>
+    <br><br>
+    <p style="text-align:justify">Correspondant aux directives de l'article 6-III et 19 de la Loi numero 2004-575 du 21
+        juin 2004 relative à la Confiance en l'économie numérique, dite L.C.E.N., nous informons les visiteurs du site
+        internet : <a href="https://PROJET SCOLAIRE" target="_blank">PROJET SCOLAIRE</a> Ces informations qui suivent :
+    </p>
     <br />
     <p style="text-align:justify"><strong>1. Données légales :</strong></p>
 
-        
-    <p style="text-align:justify">Nom du propriétaire : <strong>Houda Ousbane</strong><br />
-    Adresse de localisation du propriétaire : <strong>10 Rue du Général Sarrail,  76000  - Rouen</strong><br />
-    <br />
-    Le Fondateur du site  : <strong>Ousbane Houda</strong><br />
-    Le Responsable de la publication est : <strong>Ousbane Houda</strong><br />
-    Ou contacter le Responsable de la publication : <strong>devagengy@gmail.com</strong><br />
-    <br />
-    Le Développeur est : <strong>Ousbane Houda</strong><br />
-        De quelle façon contacter le Réalisateur : <strong><a href="mailto:devagengy@gmail.com?subject=Contact a partir des mentions légales via le site PROJET SCOLAIRE">devagengy@gmail.com</a></strong><br />
-    <br />
+    <p style="text-align:justify">Nom du propriétaire : <strong>Maxence</strong><br />
+        Adresse de localisation du propriétaire : <strong>10 Rue du Général Sarrail, 76000 - Rouen</strong><br />
+        <br />
+        Le Fondateur du site : <strong>Ousbane Houda</strong><br />
+        Le Responsable de la publication est : <strong>Ousbane Houda</strong><br />
+        Ou contacter le Responsable de la publication : <strong>devagengy@gmail.com</strong><br />
+        <br />
+        Le Développeur est : <strong>Ousbane Houda</strong><br />
+        De quelle façon contacter le Réalisateur : <strong><a
+                href="mailto:devagengy@gmail.com?subject=Contact a partir des mentions légales via le site PROJET SCOLAIRE">devagengy@gmail.com</a></strong><br />
+        <br />
 
-    Entreprise qui assure l'hébergement : Autre<br />
-    PROJET SCOLAIRE au capital social de PROJET SCOLAIRE<br />
-    Registre du commerce et des sociétés (RCS) PROJET SCOLAIRE<br />
-    Code APE PROJET SCOLAIRE<br />
-    Numero TVA : PROJET SCOLAIRE<br />
-    Siège Sociale de l'hébergeur : PROJET SCOLAIRE<br />
-    <br />
-    <br />
-    Ces Mentions Légales ont été réalisées via <strong><a href="https://www.generateur-de-mentions-legales.com" target="_blank">le générateur de mentions légales</a></strong><br />
+        Entreprise qui assure l'hébergement : Autre<br />
+        PROJET SCOLAIRE au capital social de PROJET SCOLAIRE<br />
+        Registre du commerce et des sociétés (RCS) PROJET SCOLAIRE<br />
+        Code APE PROJET SCOLAIRE<br />
+        Numero TVA : PROJET SCOLAIRE<br />
+        Siège Sociale de l'hébergeur : PROJET SCOLAIRE<br />
+        <br />
+        <br />
+        Ces Mentions Légales ont été réalisées via <strong><a href="https://www.generateur-de-mentions-legales.com"
+                target="_blank">le générateur de mentions légales</a></strong><br />
 
     <p style="text-align:justify"></p>
-    
 
-    
-    
+
+
+
     <p style="text-align:justify"></p>
     <br />
     <p style="text-align:justify"><strong>2. Introduction :</strong></p>
-    
-    <p style="text-align:justify">Tout internaute se connectant et utilisant le site web : <a href="https://PROJET SCOLAIRE" target="_blank">PROJET SCOLAIRE</a> est considéré comme usageé du site web.<br />
-    Le site web <strong>PROJET SCOLAIRE</strong> regroupe un ensemble de services, dans l'état, mis à disposition des utilisateur. Il est ici précisé que ceux-ci doivent rester honnête et faire preuve de bonne foi tant envers les différents usagés qu'envers le Développeur du site PROJET SCOLAIRE. Le site PROJET SCOLAIRE est mis à jour régulièrement par Ousbane Houda.<br />
-    Ousbane Houda s'efforce de fournir sur le site internet PROJET SCOLAIRE des informations les plus précises possibles (sous réserve de modifications), mais ne peuvent attester l'exactitude, la complétude et les informations transmises sur son site, qu'elles soient ou non de son fait. En conséquence, l'utilisateur reconnaît utiliser ces informations données (à titre indicatif, non exhaustives et susceptibles d'évoluer) sous son unique responsabilité.</p>
-    
+
+    <p style="text-align:justify">Tout internaute se connectant et utilisant le site web : <a
+            href="https://PROJET SCOLAIRE" target="_blank">PROJET SCOLAIRE</a> est considéré comme usageé du site
+        web.<br />
+        Le site web <strong>PROJET SCOLAIRE</strong> regroupe un ensemble de services, dans l'état, mis à disposition
+        des utilisateur. Il est ici précisé que ceux-ci doivent rester honnête et faire preuve de bonne foi tant envers
+        les différents usagés qu'envers le Développeur du site PROJET SCOLAIRE. Le site PROJET SCOLAIRE est mis à jour
+        régulièrement par Ousbane Houda.<br />
+        Ousbane Houda s'efforce de fournir sur le site internet PROJET SCOLAIRE des informations les plus précises
+        possibles (sous réserve de modifications), mais ne peuvent attester l'exactitude, la complétude et les
+        informations transmises sur son site, qu'elles soient ou non de son fait. En conséquence, l'utilisateur
+        reconnaît utiliser ces informations données (à titre indicatif, non exhaustives et susceptibles d'évoluer) sous
+        son unique responsabilité.</p>
+
     <p style="text-align:justify"></p>
     <br />
     <p style="text-align:justify"><strong>3. Accessibilité :</strong><br />
-    <br />
-    Le site suivant PROJET SCOLAIRE est principalement accessible aux usagés 24/7, sauf en cas de maintenance, prévu ou pas, pour les besoins de  maintenance ou en cas de force majeure. En cas d'impossibilité d'accès au service, PROJET SCOLAIRE s'engage à faire de son mieux pour rétablir l'accès au site internet et tentera alors d'informer au préalable aux utilisateurs Dates & heures de l'intervention. N'étant subordonné qu'à une obligation de moyen, PROJET SCOLAIRE ne pourrait être tenu comme responsable des soucis, quelle qu'en soit la nature.</p>
-    
+        <br />
+        Le site suivant PROJET SCOLAIRE est principalement accessible aux usagés 24/7, sauf en cas de maintenance, prévu
+        ou pas, pour les besoins de maintenance ou en cas de force majeure. En cas d'impossibilité d'accès au service,
+        PROJET SCOLAIRE s'engage à faire de son mieux pour rétablir l'accès au site internet et tentera alors d'informer
+        au préalable aux utilisateurs Dates & heures de l'intervention. N'étant subordonné qu'à une obligation de moyen,
+        PROJET SCOLAIRE ne pourrait être tenu comme responsable des soucis, quelle qu'en soit la nature.
+    </p>
+
     <p style="text-align:justify"></p>
     <br />
     <p style="text-align:justify"><strong>4. Propriété intellectuelle :</strong><br />
-    <br />
-    Ousbane Houda est propriétaire unique de l'intégralité des droits de propriété intellectuelle ou détient les droits d'usage sur l'intégralité des éléments accessibles sur le site suivant, tant structurellement que sur les textes, , graphismes, icônes, sons, logicielsetc…<br />
-    Toute reproduction même partielle du site internet PROJET SCOLAIRE, affichage, modification, mis à jour totalement ou partiellement de l'un quelconque de ces éléments, quel que soit le  moyen ou la technique utilisé, est strictementinterdite, sauf autorisation écrite préalable de Ousbane Houda, responsable du site suivant même partielle du site suivant PROJET SCOLAIRE, représentation, modification, adaptation totalement ou partiellement de l'un  de ces éléments, quel que soit le  moyen ou la technique utilisé, est formellementinterdite, excepté acceptation  préalable de Ousbane Houda, propriétaire du site suivant à cette adresse : devagengy@gmail.com, à défaut elle sera considérée comme constitutive d'une contrefaçon et passible de poursuite d'après les dispositions des différents articles L.335-2 et suivants du Code de Propriété Intellectuelle.</p>
-    
+        <br />
+        Ousbane Houda est propriétaire unique de l'intégralité des droits de propriété intellectuelle ou détient les
+        droits d'usage sur l'intégralité des éléments accessibles sur le site suivant, tant structurellement que sur les
+        textes, , graphismes, icônes, sons, logicielsetc…<br />
+        Toute reproduction même partielle du site internet PROJET SCOLAIRE, affichage, modification, mis à jour
+        totalement ou partiellement de l'un quelconque de ces éléments, quel que soit le moyen ou la technique utilisé,
+        est strictementinterdite, sauf autorisation écrite préalable de Ousbane Houda, responsable du site suivant même
+        partielle du site suivant PROJET SCOLAIRE, représentation, modification, adaptation totalement ou partiellement
+        de l'un de ces éléments, quel que soit le moyen ou la technique utilisé, est formellementinterdite, excepté
+        acceptation préalable de Ousbane Houda, propriétaire du site suivant à cette adresse : devagengy@gmail.com, à
+        défaut elle sera considérée comme constitutive d'une contrefaçon et passible de poursuite d'après les
+        dispositions des différents articles L.335-2 et suivants du Code de Propriété Intellectuelle.
+    </p>
+
     <p style="text-align:justify"><br />
-    <strong>5. Cookies et Liens Hypertextes :</strong><br />
-    <br />
-    Le site internet PROJET SCOLAIRE comporte différents liens hypertextes vers plusieurs sites (partenariats, informations etc) mis en place suite à la validation de Ousbane Houda<a href="https://www.generateur-de-mentions-legales.com/" style="text-decoration:none"><font color="#000000">.</font></a> Cependant, Ousbane Houda ne peut pas vérifier l'ensemble du contenu des différents sites  visités et rejette donc l'entière responsabilité de de cette façon concernant les eventuels risques de contenus interdits.<br />
-    L'utilisateur est donc tenu informé que au cours de ses utilisatations sur le site internet PROJET SCOLAIRE, un ou des cookies peuvent s'installer automatiquement sur son ordinateur en utilisant son logiciel informatique de navigation. Un cookie c'est un assemblage de donnée qui ne permettra jamais de savoir qui l'utilise, cependant qui sauvegarde des données relatives à la navigation de l'utilisateur sur le site web. <br />
-    La configration du logiciel de navigation permet de notifier de la compagnie de cookie et éventuellement, de la contester de la procédure expliquée à l' adresse  : <a href="https://www.PROJET SCOLAIRE">www.PROJET SCOLAIRE</a>. La mise en place peut néanmoins de configurer le navigateur de son ordinateur afin de refuser l'installation des cookies, sachant que le refus d'installation d'un cookie pourrait potentiellement entraîner l'incapacité d'accéder à plusieurs services. Concernant tout barrage des cookies, cherchez dans le moteur de recherche : blocage des cookies et suivez les explications en rapport avec votre version de navigateur.</p>
-    
+        <strong>5. Cookies et Liens Hypertextes :</strong><br />
+        <br />
+        Le site internet PROJET SCOLAIRE comporte différents liens hypertextes vers plusieurs sites (partenariats,
+        informations etc) mis en place suite à la validation de Ousbane Houda<a
+            href="https://www.generateur-de-mentions-legales.com/" style="text-decoration:none">
+            <font color="#000000">.</font>
+        </a> Cependant, Ousbane Houda ne peut pas vérifier l'ensemble du contenu des différents sites visités et rejette
+        donc l'entière responsabilité de de cette façon concernant les eventuels risques de contenus interdits.<br />
+        L'utilisateur est donc tenu informé que au cours de ses utilisatations sur le site internet PROJET SCOLAIRE, un
+        ou des cookies peuvent s'installer automatiquement sur son ordinateur en utilisant son logiciel informatique de
+        navigation. Un cookie c'est un assemblage de donnée qui ne permettra jamais de savoir qui l'utilise, cependant
+        qui sauvegarde des données relatives à la navigation de l'utilisateur sur le site web. <br />
+        La configration du logiciel de navigation permet de notifier de la compagnie de cookie et éventuellement, de la
+        contester de la procédure expliquée à l' adresse : <a href="https://www.PROJET SCOLAIRE">www.PROJET
+            SCOLAIRE</a>. La mise en place peut néanmoins de configurer le navigateur de son ordinateur afin de refuser
+        l'installation des cookies, sachant que le refus d'installation d'un cookie pourrait potentiellement entraîner
+        l'incapacité d'accéder à plusieurs services. Concernant tout barrage des cookies, cherchez dans le moteur de
+        recherche : blocage des cookies et suivez les explications en rapport avec votre version de navigateur.
+    </p>
+
     <strong>6. Protection des personnes et des biens - Gestion des données personnelles :</strong><br />
     <br />
     <p>
-    En France, les données personnelles sont notamment protégées par la loi n° 78-87 du 6 janvier 1978 ou encore la loi n° 2004-801 datant du 6 août 2004, l'article L. 226-13 du Code pénal et la Directive Européenne datant du 24 octobre 1995.</p>
-    
-    <p style="text-align:justify">Sur le site web PROJET SCOLAIRE, Ousbane Houda ne collecte pas d'informations personnelles ( suivant l'article 4 loi n°78-17 du 06 janvier 1978) relatives à l'usager que pour la nécéssité de plusieurs services offerts par le site interne PROJET SCOLAIRE. L'utilisateur donne ces données en toute conscience de cause, notamment lorsqu'il procède par lui-même à leur saisie. Il est alors détaillé à l'utilisateur du site interne PROJET SCOLAIRE le devoir ou pas de fournir ces données.<br />
-    En conformité avec les dispositifs des articles 38 et autres de la loi 78-17 du 6 janvier 1978 concernant l'informatique, les fichiers et aux différentes libertés, n'importe quel utilisateur dispose d'un droit d'accès aux informations, de rectification, de suppression et d'opposition à toutes les informations personnelles qui le concerne. Pour l'exercer, adressez une demande à PROJET SCOLAIRE par mail : <strong><a href="mailto:devagengy@gmail.com?subject=Contact à partir des mentions légales via le site PROJET SCOLAIRE">devagengy@gmail.com</a></strong> ou via lettre manuscrite  signée, accompagnée d'une copie de pièce d'identité avec signature du titulaire de la pièce, en mentionnant l'adresse à laquelle une réponse devra être envoyée.</p>
-    
-    <p style="text-align:justify">Aucune information personnelle de l'usager du site web PROJET SCOLAIRE n'est publiée à l'insu de l'utilisateur, troquée, transmise, cédée sur n'importe quel support à des groupes. Uniquement l'hypothèse de la vente du site PROJET SCOLAIRE et de ses droits en autorise Ousbane Houda à céder les dites informations  à l'éventuel acquéreur qui serait alors à son tour tenu à la même obligation de conservation et de modification des informations concernant l'utilisateur du site interne PROJET SCOLAIRE.<br />
-    Le site web PROJET SCOLAIRE est en conformité avec le RGPD voir notre politique RGPD PROJET SCOLAIRE.</p>
-    
-    <p style="text-align:justify">Les bases de données sont sécurisées par les règles de la loi du 1er juillet 1998 transposant la directive 96/9 du 11 mars 1996 relative à la protection juridique des bases de données.</p>
-    
+        En France, les données personnelles sont notamment protégées par la loi n° 78-87 du 6 janvier 1978 ou encore la
+        loi n° 2004-801 datant du 6 août 2004, l'article L. 226-13 du Code pénal et la Directive Européenne datant du 24
+        octobre 1995.</p>
+
+    <p style="text-align:justify">Sur le site web PROJET SCOLAIRE, Ousbane Houda ne collecte pas d'informations
+        personnelles ( suivant l'article 4 loi n°78-17 du 06 janvier 1978) relatives à l'usager que pour la nécéssité de
+        plusieurs services offerts par le site interne PROJET SCOLAIRE. L'utilisateur donne ces données en toute
+        conscience de cause, notamment lorsqu'il procède par lui-même à leur saisie. Il est alors détaillé à
+        l'utilisateur du site interne PROJET SCOLAIRE le devoir ou pas de fournir ces données.<br />
+        En conformité avec les dispositifs des articles 38 et autres de la loi 78-17 du 6 janvier 1978 concernant
+        l'informatique, les fichiers et aux différentes libertés, n'importe quel utilisateur dispose d'un droit d'accès
+        aux informations, de rectification, de suppression et d'opposition à toutes les informations personnelles qui le
+        concerne. Pour l'exercer, adressez une demande à PROJET SCOLAIRE par mail : <strong><a
+                href="mailto:devagengy@gmail.com?subject=Contact à partir des mentions légales via le site PROJET SCOLAIRE">devagengy@gmail.com</a></strong>
+        ou via lettre manuscrite  signée, accompagnée d'une copie de pièce d'identité avec signature du titulaire de la
+        pièce, en mentionnant l'adresse à laquelle une réponse devra être envoyée.</p>
+
+    <p style="text-align:justify">Aucune information personnelle de l'usager du site web PROJET SCOLAIRE n'est publiée à
+        l'insu de l'utilisateur, troquée, transmise, cédée sur n'importe quel support à des groupes. Uniquement
+        l'hypothèse de la vente du site PROJET SCOLAIRE et de ses droits en autorise Ousbane Houda à céder les dites
+        informations à l'éventuel acquéreur qui serait alors à son tour tenu à la même obligation de conservation et de
+        modification des informations concernant l'utilisateur du site interne PROJET SCOLAIRE.<br />
+        Le site web PROJET SCOLAIRE est en conformité avec le RGPD voir notre politique RGPD PROJET SCOLAIRE.</p>
+
+    <p style="text-align:justify">Les bases de données sont sécurisées par les règles de la loi du 1er juillet 1998
+        transposant la directive 96/9 du 11 mars 1996 relative à la protection juridique des bases de données.</p>
+</div>
