--- a/src/app/components/auth/auth.component.css
+++ b/src/app/components/auth/auth.component.css
@@ -1,9 +1,116 @@
+
+h2 {
+    margin-bottom: 5%;
+    color: white;
+  }
+  
+  .text {
+    margin-bottom: 50px;
+  }
+  #flex_ {
+    justify-content: center;
+    display: flex;
+  }
+  .btn {
+    margin-left: 4%;
+    margin-top: 5%;
+    background: #6FCEAE;
+    border-radius: 5px;
+    text-transform: uppercase;
+  }
+  .btn.closebtn {
+    padding: 5px 10px;
+  }
+  a.btn.closebtn {
+    color: white;
+    text-decoration: none;
+  }
+  .btn.openbtn {
+    padding: 20px;
+  }
+  .btn.openbtn:hover {
+    box-shadow: 0 5px 5px 0px rgba(0, 0, 0, 0.4);
+  }
+  .modal {
+      position: fixed;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background: rgba(0, 0, 0, 0.8);
+      z-index: 99999;
+      opacity: 0;
+      -webkit-transition: opacity 400ms ease-in;
+      -moz-transition: opacity 400ms ease-in;
+      transition: opacity 400ms ease-in;
+      pointer-events: none;
+    }
+    
+    .modal-content {
+      background: #E4E4E4;
+      height: auto;
+      position: absolute;
+      padding: 1.5rem;
+      border-radius: 1rem;
+      top: 20%;
+      bottom: 20%;
+      left: 32.5%;
+      right: 32.5%;
+      display: flex;
+      flex-direction: column;
+      background-color: #74EBD5;
+      background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%);
+      box-shadow: -5px -5px 10px 4px rgb(0 0 0 / 10%), 5px 5px 10px 4px rgb(45 150 255 / 15%);
+  }
+    
+    .modal:target {
+      opacity: 1;
+      pointer-events: auto;
+    }
+    
+    #annuler {
+      display: none;
+    }
+    
+    
+    .declaration_style{
+        border: none;
+        padding: 17px;
+        background-color: white;
+        border-radius: 8px;
+        margin-bottom: 10px;
+        width: 95%;
+    }
+  
+    .lieu_declaration{
+        border: none;
+        padding: 0px 5px 0px 5px;
+        background-color: white;
+        border-radius: 8px;
+        margin-bottom: 10px;
+        width: 95%;
+    }
+    #explication_decla{
+        width: 70%;
+        border: none;
+        height: 150px;
+        border-radius: 8px;
+    }
+    .photo_description{
+        display: flex;
+        flex-direction: row;
+    }
+/*-------------------------------------------------------------------*/
 .auth-container {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     overflow: auto;
+}
+
+h1 {
+    color: white;
 }
 
 .auth-container_block {
@@ -15,7 +122,8 @@
     border-radius: 1rem;
     width: 500px;
     box-shadow: -5px -5px 10px 4px rgba(0,0,0,0.1), 5px 5px 10px 4px rgba(45, 150, 255, 0.15);
-    background-image: linear-gradient(37deg, #6fceae 0%, #e0c3fc 100%);
+    background-color: #74EBD5;
+    background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%);    
     min-height: 300px;
     color: black;  
     
@@ -45,10 +153,11 @@ input, button {
 }
 
 input {
-    padding: 1rem;
+    padding: 10px;
     border-radius: 1rem;
-    background-color: #EDEDED;
-    border: 1px solid rgba(0, 0, 0, 0.425);
+    background-color: #ffffff;
+    border: none;
+    margin: 10px;
 }
 
 input:focus {
