--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -1,23 +1,27 @@
-<section class="auth-container">
+<div class="modal" id="connexion">
+        <section class="auth-container">
 
-    <div [ngClass]="(isLogin==true) ? '' : 'register' " class="auth-container_block">
-        <h1 style="padding-bottom: 1rem">{{(isLogin==true) ? 'Connexion' : 'Inscription (TODO)'}}</h1>
-        
-        <ng-container *ngIf="isLogin">
-            <app-form-login style="width: 90%;"></app-form-login>
-        </ng-container>
+            <div [ngClass]="(isLogin==true) ? '' : 'register' " class="auth-container_block">
+                <h1 style="padding-bottom: 1rem">{{(isLogin==true) ? 'Connexion' : 'Inscription'}}</h1>
 
-        <ng-container *ngIf="!isLogin">
-            <app-form-register style="width: 90%;"></app-form-register>
-        </ng-container>
+                <ng-container *ngIf="isLogin">
+                    <app-form-login style="width: 90%;"></app-form-login>
+                </ng-container>
 
-        <p (click)="toggleForm()" style="padding: 2rem 0 1rem 0; cursor: pointer;">
-            {{
-                (isLogin==true) 
-                ? 'Pas de compte ? Inscrivez-vous' 
-                : 'Déjà un compte ? Connectez-vous'
-            }}
-        </p>
+                <ng-container *ngIf="!isLogin">
+                    <app-form-register style="width: 90%;"></app-form-register>
+                </ng-container>
+
+                <p (click)="toggleForm()" style="padding: 2rem 0 1rem 0; cursor: pointer;">
+                    {{
+                    (isLogin==true)
+                    ? 'Pas de compte ? Inscrivez-vous'
+                    : 'Déjà un compte ? Connectez-vous'
+                    }}
+                </p>
+                
+        <a href="#annuler" class="btn closebtn"> Annuler </a>
+            </div>
+
+        </section>
     </div>
-   
-</section>
