--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -13,7 +13,8 @@
     color: #50b996;
 }
 .green_button{
-    background-color: #6FCEAE;
+    background-color: #27c9ac;
+    background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%);
     color: white;
     border-radius: 50px;
     height: 53%;
@@ -22,13 +23,14 @@
     margin-left: 10px;
     padding: 0 20px;
     cursor: pointer;
-    border: 2px solid #6FCEAE;
+    border: none;
     
 }
 .green_button:hover{
-    background-color: #EDEAEA;
-    color: #6FCEAE;
-    border: 2px solid #6FCEAE;
+  background-color: none;
+    background-image: none;
+    color: rgb(255, 255, 255);
+    border: none;
     margin-left: 10px;
 }
 .bouton_align{
