--- a/src/app/modules/garbage-collector/components/declaration/declaration.component.css
+++ b/src/app/modules/garbage-collector/components/declaration/declaration.component.css
@@ -1,25 +1,36 @@
+h2 {
+  margin-bottom: 5%;
+  color: white;
+}
 
 .text {
-    margin-bottom: 50px;
-  }
-  
-  .btn {
-    margin-top: 10px;
-    background: #6FCEAE;
-    border-radius: 5px;
-    text-transform: uppercase;
-  }
-  .btn.closebtn {
-    padding: 5px 10px;
-  }
-  .btn.openbtn {
-    padding: 20px;
-  }
-  .btn.openbtn:hover {
-    box-shadow: 0 5px 5px 0px rgba(0, 0, 0, 0.4);
-  }
-  
-  .modal {
+  margin-bottom: 50px;
+}
+#flex_ {
+  justify-content: center;
+  display: flex;
+}
+.btn {
+  margin-left: 4%;
+  margin-top: 5%;
+  background: #6FCEAE;
+  border-radius: 5px;
+  text-transform: uppercase;
+}
+.btn.closebtn {
+  padding: 5px 10px;
+}
+a.btn.closebtn {
+  color: white;
+  text-decoration: none;
+}
+.btn.openbtn {
+  padding: 20px;
+}
+.btn.openbtn:hover {
+  box-shadow: 0 5px 5px 0px rgba(0, 0, 0, 0.4);
+}
+.modal {
     position: fixed;
     top: 0;
     right: 0;
@@ -35,26 +46,28 @@
   }
   
   .modal-content {
-      background: #E4E4E4;
-      width: 35%;
-      height: auto;    
-      position: absolute;
-      padding: 5px 20px 13px 20px;
-      border-radius: 5px;
-      top: 20%;
-      bottom: 20%;
-      left: 32.5%;
-      right: 32.5%;
-      display: flex;
-      flex-direction: column;
-  }
+    background: #E4E4E4;
+    height: auto;
+    position: absolute;
+    padding: 1.5rem;
+    border-radius: 1rem;
+    top: 20%;
+    bottom: 20%;
+    left: 32.5%;
+    right: 32.5%;
+    display: flex;
+    flex-direction: column;
+    background-color: #74EBD5;
+    background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%);
+    box-shadow: -5px -5px 10px 4px rgb(0 0 0 / 10%), 5px 5px 10px 4px rgb(45 150 255 / 15%);
+}
   
   .modal:target {
     opacity: 1;
     pointer-events: auto;
   }
   
-  #close {
+  #annuler {
     display: none;
   }
   
@@ -67,11 +80,7 @@
       margin-bottom: 10px;
       width: 95%;
   }
-  
-  #img_decla{
-      margin-top: 3%;
-      text-align: center;
-  }
+
   .lieu_declaration{
       border: none;
       padding: 0px 5px 0px 5px;
