--- a/src/app/modules/admin/nav-bar-admin/nav-bar-admin.component.css
+++ b/src/app/modules/admin/nav-bar-admin/nav-bar-admin.component.css
@@ -17,8 +17,13 @@ a:visited {
 }
 
 .spanSvg {
-    margin: auto 0;
+    width: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
+
+
 
 .svg_NavBarAdmin {
     align-items: center;
@@ -62,6 +67,7 @@ nav {
     z-index: 1;
     /* border-radius: 17px; */
     display: flex;
+
     justify-content: space-between;
     /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px; */
 }
