--- a/src/app/modules/admin/planning/planning.component.css
+++ b/src/app/modules/admin/planning/planning.component.css
@@ -1,51 +1,99 @@
+@import url('https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css%27');
+
 #planningBg {
     background-color: #E3E3E3;
-    min-height: calc(100vh - 80px);
+    min-height: calc(100vh - 80px - 3vh);
+    padding-top: 3vh;
 }
 
 #flexboxSemaine {
+    --input-height: 55px;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: blue;
+    /* background-color: blue; */
+    color: #5E5E5E;
+}
+
+#flexboxSemaine>p {
+    font-size: 20px;
 }
 
 #flexboxSemaine>* {
-    background-color: yellow;
+    /* background-color: yellow; */
 
 }
 
 
 .dayBackground {
-    height: 600px;
+    height: 500px;
     width: 260px;
     background-color: white;
+    padding: 10px 5px 0 5px;
 }
 
 #flexboxSemaine>form {
-    width: 60%;
+    /* width: 60%; */
 
     display: flex;
-    height: 35px;
-
+    height: var(--input-height);
+    align-items: center;
+    background-color: white;
+    border-radius: 300px;
 }
 
-#flexboxSemaine>form>input {
+#flexboxSemaine>form>input,
+#flexboxSemaine>form>div {
 
     border: none;
     height: 100%;
     padding: 0;
+    background-color: white;
+}
+
+#flexboxSemaine>form>.input1 {
+    border-radius: 300px 0 0 300px;
+}
+
+#flexboxSemaine>form>.input2 {
+    border-radius: 0 300px 300px 0;
+    width: var(--input-height);
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#flexboxSemaine>form>div>.submit {
+    border: none;
+    height: 85%;
+    width: 85%;
+    border-radius: 300px;
+    background-color: #6FCEAE;
+    color: white;
+    font-size: 20px;
 }
 
 #flexboxSemaine>form>img {
     background-color: white;
-    height: 100%;
+    height: 70%;
+
+
 
 }
 
 .skipWeek {
     width: 5%;
-    background-color: red;
+    /* background-color: red; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.skipWeek>.fi {
+    transform: scale(3);
+    color: #484848;
+
 }
 
 #dayFlexbox {
@@ -76,4 +124,88 @@
     font-size: 23px;
     font-weight: 600;
 
+}
+
+/* .wrapper {
+    margin: 25px auto;
+    max-width: 600px;
+    text-align: center;
+    padding: 0 20px;
+}
+
+.container {
+    width: 45%;
+    margin: 0 25px 25px 0;
+    display: inline-block;
+    vertical-align: top;
+} */
+
+
+
+
+.name-block {
+    padding: 20px 10px;
+    border-bottom: solid 1px #ccc;
+    color: rgba(0, 0, 0, 0.87);
+
+    flex-direction: row;
+
+    justify-content: space-between;
+    box-sizing: border-box;
+    cursor: move;
+    background: white;
+    font-size: 14px;
+    background-color: #CFF3E7;
+    border-radius: 300px;
+    color: black;
+    font-size: 15px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.nameP {
+    text-align: center;
+}
+
+.cdk-drag-preview {
+    box-sizing: border-box;
+    border-radius: 4px;
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+        0 8px 10px 1px rgba(0, 0, 0, 0.14),
+        0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    padding: 20px 10px;
+    border-bottom: solid 1px #ccc;
+    color: rgba(0, 0, 0, 0.87);
+    box-sizing: border-box;
+    cursor: move;
+    /* background: white; */
+    font-size: 14px;
+    background-color: #6FCEAE;
+    border-radius: 300px;
+    color: white;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.cdk-drag-placeholder {
+    opacity: 0;
+}
+
+.cdk-drag-animating {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.boutonValidé {
+    padding: 7px 7px 7px 7px;
+    background-color: #6FCEAE;
+    color: white !important;
+    text-decoration: none;
+    border: none;
+    border-radius: 200px;
+    font-size: 20px;
+    box-shadow: 0px 3px 4px rgb(168, 168, 168);
+    float: right;
+    margin-top: 80px;
+    margin-right: 20%;
 }
