--- a/src/app/components/mentionsLegales/mentions.component.html
+++ b/src/app/components/mentionsLegales/mentions.component.html
@@ -3,7 +3,7 @@
     <br><br>
     <p style="text-align:justify">Correspondant aux directives de l'article 6-III et 19 de la Loi numero 2004-575 du 21
         juin 2004 relative à la Confiance en l'économie numérique, dite L.C.E.N., nous informons les visiteurs du site
-        internet : <a href="https://PROJET SCOLAIRE" target="_blank">PROJET SCOLAIRE</a> Ces informations qui suivent :
+        internet : <a href="https://PROJET SCOLAIRE" target="_blank">projet scolaire</a> Ces informations qui suivent :
     </p>
     <br />
     <p style="text-align:justify"><strong>1. Données légales :</strong></p>
