--- a/src/app/components/auth/form-login/form-login.component.html
+++ b/src/app/components/auth/form-login/form-login.component.html
@@ -1,18 +1,16 @@
 <form class="auth-form" id="login-form" #loginForm="ngForm" (ngSubmit)="loginForm.form.valid && onSubmit(loginForm)">
     
     <div class="auth-form_input-block">
-        <label for="email">Email :</label>
-        <input id="email" name="email" ngModel #email="ngModel" type="text">
+        <input id="email" name="email" ngModel #email="ngModel" type="text" placeholder="E-mail">
     </div>
 
     <div class="auth-form_input-block">
-        <label for="password">Mot de passe :</label>
-        <input id="password" name="password" ngModel #password="ngModel" type="text">
+        <input id="password" name="password" ngModel #password="ngModel" type="text" placeholder="Mot de passe">
     </div>
 
     
     
 
-    <button type="submit"> connexion </button>
+    <button type="submit"> Je me connecte ! </button>
 
 </form>
