--- a/src/app/components/map/map.component.css
+++ b/src/app/components/map/map.component.css
@@ -53,7 +53,8 @@
 }
 
 .fi-rs-marker{
-    background-color: #6FCEAE;
+  background-color: #27c9ac;
+  background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%);
     padding: 15%;
     border-radius: 100%;
     color: white;
