--- a/src/app/modules/garbage-collector/components/declaration/declaration.component.css
+++ b/src/app/modules/garbage-collector/components/declaration/declaration.component.css
@@ -13,7 +13,7 @@ h2 {
 .btn {
   margin-left: 4%;
   margin-top: 5%;
-  background: #6FCEAE;
+  background: #ba9fa8;
   border-radius: 5px;
   text-transform: uppercase;
 }
@@ -36,7 +36,7 @@ a.btn.closebtn {
     right: 0;
     bottom: 0;
     left: 0;
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.591);
     z-index: 99999;
     opacity: 0;
     -webkit-transition: opacity 400ms ease-in;
@@ -46,8 +46,6 @@ a.btn.closebtn {
   }
   
   .modal-content {
-    background: #E4E4E4;
-    height: auto;
     position: absolute;
     padding: 1.5rem;
     border-radius: 1rem;
@@ -57,9 +55,9 @@ a.btn.closebtn {
     right: 32.5%;
     display: flex;
     flex-direction: column;
-    background-color: #74EBD5;
-    background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%);
     box-shadow: -5px -5px 10px 4px rgb(0 0 0 / 10%), 5px 5px 10px 4px rgb(45 150 255 / 15%);
+    width: fit-content;
+    height: fit-content;
 }
   
   .modal:target {
@@ -73,29 +71,58 @@ a.btn.closebtn {
   
   
   .declaration_style{
-      border: none;
-      padding: 17px;
-      background-color: white;
-      border-radius: 8px;
-      margin-bottom: 10px;
-      width: 95%;
+    padding: 10px;
+    width: 50%;
+    border-radius: 1rem;
+    background-color: #ffffffb5;
+    border: none;
+    margin: 10px;
   }
 
   .lieu_declaration{
       border: none;
       padding: 0px 5px 0px 5px;
-      background-color: white;
+      background-color:#ffffffb5;
       border-radius: 8px;
       margin-bottom: 10px;
       width: 95%;
   }
   #explication_decla{
-      width: 70%;
       border: none;
-      height: 150px;
+      height: 100px;
       border-radius: 8px;
   }
   .photo_description{
       display: flex;
       flex-direction: row;
+  }
+  input{
+    padding: 10px;
+    border-radius: 1rem;
+    background-color: #ffffffb5;
+    border: none;
+    margin: 10px;
+  }
+  #photo_decla{
+    background-color: #ffffff33;
+  }
+
+#declaration-form {
+    display: inline-grid;
+}
+
+
+  /*RESPONSIVE*/
+
+  @media all and (max-width : 800px) {
+    .modal-content{
+      width: auto;
+      position: initial;
+      border-radius: 0px;
+      height: 100%;
+      padding-top: 40%;
+    }
+    h2 {
+      text-align: center;
+  }
   }
