declaration pas du tout fini

--- a/src/app/modules/admin/declaration/declaration.component.html
+++ b/src/app/modules/admin/declaration/declaration.component.html
@@ -1,2 +1,13 @@
 <app-nav-bar-admin></app-nav-bar-admin>
-<p>declaration works!</p>
+<div id="declarationBg">
+    <!-- flexbox input -->
+    <div id="flexboxInput">
+        <span>
+            <span>Déclarations</span>
+            <span>Archives</span>
+        </span>
+        <select type="select">
+            <option>Dégradation matériel</option>
+        </select>
+    </div>
+</div>
