--- a/src/app/components/auth/form-register/form-register.component.html
+++ b/src/app/components/auth/form-register/form-register.component.html
@@ -1,4 +1,4 @@
-<form class="auth-form" id="register-form" #registerForm="ngForm">
+<form class="auth-form" id="register-form" #registerForm="ngForm" (ngSubmit)="registerForm.form.valid && onSubmit(registerForm)">
     <div class="auth-form_input-block">
         <input id="last_name" name="last_name" ngModel #password="ngModel" type="text" placeholder="Nom">
     </div>
