style (bancale a revoir)

--- a/src/app/components/auth/auth.component.css
+++ b/src/app/components/auth/auth.component.css
@@ -27,6 +27,7 @@ h2 {
   }
   .btn.openbtn {
     padding: 20px;
+    color: black;
   }
   .btn.openbtn:hover {
     box-shadow: 0 5px 5px 0px rgba(0, 0, 0, 0.4);
