--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,11 +4,12 @@
     <label for="drop" class="toggle">☰</label>
     <input type="checkbox" id="drop" />
 
-    <ul class="menu bouton_align">
+    <ul class="menu bouton_align" >
         <li><button (click)="toggleTheme()" class="button_darkmode">{{themehtml}}</button></li>
         <li><a href="#declaration" class="btn openbtn">Déclarer un problème</a></li>
         <li><a class="simple_button" routerLink="/mention-legal">Mentions Légales</a></li>
         <li><a href="#connexion" class="btn openbtn green_button">Connexion</a></li>
+        <li><a class="btn openbtn"></a></li>
 
     </ul>
 
