--- a/src/app/components/map/map.component.css
+++ b/src/app/components/map/map.component.css
@@ -43,7 +43,6 @@
 }
 .bouton_location{
     border-radius: 0px 50px 50px 0px ;
-    width: 50px;
     height: 50px;
     display: flex;
     justify-content: center;
@@ -61,11 +60,24 @@
     display: flex;
 }
 
-/*MEDIAQUERIES SEARCH BAR*/
-@media all and (max-device-width: 564px){
-  #search_bar_container{
-    right: 4%;
-    left: 4%;
-    width: 90%;
-  }
+/*MEDIAQUERIES TABLETTE SEARCH BAR*/
+@media all and (max-device-width: 800px){
+
+#search_bar_container {
+  right: 10%;
+  left: 10%;
+  width: 80%;
+}
+}
+
+/*MEDIAQUERIES MOBILE SEARCH BAR*/
+@media all and (max-device-width: 500px){
+  .bouton_location{
+    width: 20%;
+}
+#search_bar_container{
+  right: 4%;
+  left: 4%;
+  width: 90%;
+}
 }
