--- a/src/app/modules/garbage-collector/components/eboueur-messages/eboueur-messages.component.html
+++ b/src/app/modules/garbage-collector/components/eboueur-messages/eboueur-messages.component.html
@@ -1,4 +1,4 @@
-<div id="bloc_message">
+<!-- <div id="bloc_message">
     <div id="messages_recus">
             
         <div class="message_recus_colum">
@@ -48,4 +48,7 @@
             <input class="type_message" type="text" placeholder="Entrer votre message ici">
         </div>
     </div>
-</div>
+</div> -->
+<br><br><br><br><br><br>
+
+<iframe src="https://deadsimplechat.com/o0HLuOeF5" width="100%" height="700px"></iframe>
