--- a/src/app/modules/garbage-collector/components/eboueur-messages/eboueur-messages.component.css
+++ b/src/app/modules/garbage-collector/components/eboueur-messages/eboueur-messages.component.css
@@ -7,7 +7,7 @@ html, body{
 #bloc_message{
     display: flex;
     flex-direction: column;
-    background-color: #EDEAEA;
+    background-color: #e4e4e4;
     height: 100vh;
     width: 100vw;
     overflow: hidden;
@@ -15,7 +15,7 @@ html, body{
 
 #messages_recus{
     margin-top: 110px;
-    background-color: #EDEAEA;
+    background-color: #e4e4e4;
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
@@ -24,7 +24,7 @@ html, body{
 }
 
 #liste_messages{
-    background-color: #E4E4E4;
+    background-color: #e4e4e4;
     width: 100%;
     height: 93%;
     overflow-y: scroll;
@@ -34,9 +34,10 @@ html, body{
 }
 
 #envoi_message{
-    background-color: #FFFFFF;
+    background-color: #e4e4e4;
     width: 100%;
     height: 7%;
+    position: fixed;
 }
 .type_message{
     border: none;
@@ -98,16 +99,18 @@ html, body{
 }
 .interieur_message_envoye{
     background-color: rgb(255, 255, 255);
-    border-radius: 30px;
+    border-radius: 30px 30px 0 30px;
     width: auto;
     margin-right: 1%;
+    padding: 5px;
 }
 .interieur_message_recu{
-    background-color: #6FCEAE;
+    background: linear-gradient(90deg, #74cfeb 0%, #9FACE6 100%);
     color: white;
-    border-radius: 30px;
+    border-radius: 30px 30px 30px 0px;
     width: auto;
     margin-left: 1%;
+    padding: 5px;
 }
 .message_envoye h4, .message_destinataire h4 {
     padding: 7px 13px;
@@ -124,11 +127,36 @@ html, body{
     align-items: center;
 }
 #mat-input-1 {
+    background-color: #fff;
     width: 80%;
     border: none;
-    height: 100%;
+    height: 57px;
+    border-radius: 50px;
+    position: fixed;
+    bottom: 10px;
+    padding: 0 0 0 2%;
+    box-shadow: rgba(17, 17, 26, 0.05) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
   }
-  
+  #mat-input-1:active{
+    border: none;
+  }
+button {
+    padding: 10px;
+    background-color: #6fceae;
+    border-radius: 50px;
+    color: white;
+    cursor: pointer;
+    border: 2px solid rgba(255, 255, 255, 0);
+    font-size: larger;
+    position: fixed;
+    bottom: 15px;
+    right: 6%;
+}
+button:hover{
+    background-color: white;
+    border: 2px solid black;
+    color: black;
+}
 /*RESPONSIVE PETIT ECRAN PC - GRAND ECRAN TABLETTES MESSAGE*/
 
 @media all and (max-width : 1472px) {
