--- a/src/app/partials/filters-bennes/filters-bennes.component.html
+++ b/src/app/partials/filters-bennes/filters-bennes.component.html
@@ -14,7 +14,7 @@
         </div>
         <div class="materiaux">
             <a class="bouton_filtres" (click)="filterMap(0.25)"><img src="./assets/images/marker_lieu.png" width="15px"
-                    alt=""> <br>- 250m</a>
+                    alt=""> <br>-250m</a>
             <a class="bouton_filtres" (click)="filterMap(0.5)"><img src="./assets/images/marker_lieu.png" width="15px"
                     alt=""> <br>-500m</a>
             <a class="bouton_filtres" (click)="filterMap(0.75)"><img src="./assets/images/marker_lieu.png" width="15px"
